feat(db): implemented db connection settings

--- a/RestaurantReservation.API/appsettings.Development.json
+++ b/RestaurantReservation.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "RestaurantReservationDb": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DbName": "RestaurantReservations"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
