--- a/RestaurantReservation.API/RestaurantReservation.API.csproj
+++ b/RestaurantReservation.API/RestaurantReservation.API.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="FluentValidation" Version="11.9.0" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
     </ItemGroup>
 
