--- a/RestaurantReservation.API/RestaurantReservation.API.csproj
+++ b/RestaurantReservation.API/RestaurantReservation.API.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="FluentValidation" Version="11.9.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.28" />
       <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
       <PackageReference Include="SharpGrip.FluentValidation.AutoValidation.Mvc" Version="1.4.0" />
     </ItemGroup>
