--- a/RestaurantReservation.API/RestaurantReservation.API.csproj
+++ b/RestaurantReservation.API/RestaurantReservation.API.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.28"/>
         <PackageReference Include="SharpGrip.FluentValidation.AutoValidation.Mvc" Version="1.4.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
     <ItemGroup>
